--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Why Choose Us</title>
-  <link rel="stylesheet" href="aboutus.css"> <!-- Link to  CSS file -->
+  <link rel="stylesheet" href="style/aboutus.css">
   <style>
   </style>
 </head>
@@ -13,7 +13,7 @@
     <nav style="background-color: #222; padding: 10px;">
       <ul style="display: flex; justify-content: flex-end; list-style: none; margin: 0; padding: 0;">
         <li style="margin-right: 20px;"><a href="index.html" style="color: #fff; text-decoration: none;">Home</a></li>
-        <li style="margin-right: 20px;"><a href="property listing.html" style="color: #fff; text-decoration: none;">Properties</a></li>
+        <li style="margin-right: 20px;"><a href="property_listing.html" style="color: #fff; text-decoration: none;">Properties</a></li>
         <li><a href="contactus.html" style="color: #fff; text-decoration: none;">Contact Us</a></li>
       </ul>
     </nav>
