--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Elite Estates</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style/styles.css">
   
 
 </head>
@@ -25,8 +25,8 @@
       <h1>ELITE ESTATES</h1>
       <p>Let us help you make the move.</p>
       <div class="button-container">
-        <a href="property listing.html" class="btn">Buy a Home</a>
-        <a href="property listing.html" class="btn">Rent property</a>
+        <a href="property_listing.php" class="btn">Buy a Home</a>
+        <a href="property_listing.php" class="btn">Rent property</a>
       </div>      
     </div>
   </div>
